<resources>
    <string name="app_name">MyTaxi</string>
    <string name="splash_title">打车出行</string>
    <string name="splash_message">美好一天，平安出行 </string>
    <string name="login">登录</string>
    <string name="next">下一步</string>
    <string name="hint_input_phone">请输入手机号码</string>
    <string name="sms_send_fail">服务器响应异常</string>
    <string name="sms_send_code">向%s发送验证码成功</string>
    <string name="sending">正在向%s发送短信验证码</string>
    <string name="sms_check_fail">验证码错误</string>
    <string name="error_server_msg">服务器繁忙</string>

    <!--打车过程所有文案 -->
    <string name="where_are_you_go">您要去哪</string>
    <string name="start">起点</string>
    <string name="end">终点</string>

    <string name="locating">定位中...</string>
    <string name="call">呼叫快车</string>
    <string name="cancel">取消</string>
    <string name="route_info">全程%1$d公里，预计%2$.2f元，%3$d分钟到达</string>
    <string name="calling">正在呼叫，全程%1$d公里，预计%2$.2f元，%3$d分钟到达</string>
    <string name="calling_driver">正在呼叫附近的司机</string>
    <string name="accept_info">司机：%1$s(车牌：%2$s)已经接单，全程%3$d公里，%4$d分钟到达</string>
    <string name="driver_arrive">司机：%1$s(车牌：%2$s)已经到达</string>
    <string name="dirving">司机：%1$s(车牌：%2$s),行程中，还剩%3$.2f公里，%4$d分钟到达</string>
    <string name="order_cancel_suc">取消成功</string>
    <string name="order_cancel_error">取消失败</string>
    <string name="pay">支付</string>
    <string name="paying">支付中...</string>
    <string name="pay_info">行程结束，感谢你使用滴滴，你需支付¥%1$.2f 。\n 司机：%2$s 车牌：%3$s</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_suc">支付成功</string>
    <string name="show_call_suc">已有司机收到请求</string>
    <string name="show_call_fail">呼叫失败，稍后重试</string>
    <string name="driver_arrive_pure">司机已到达</string>
    <string name="canceling">订单取消中</string>
    <string name="ordre">订单</string>
    <string name="service">客服</string>
    <string name="feedback">反馈</string>
    <string name="driver">司机：</string>
    <string name="loading">加载中...</string>
    <string name="price">¥%1$.2f</string>
</resources>
