<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/map_container"/>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:background="@color/bg_white"
        android:id="@+id/top">
    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/user"
        android:layout_centerVertical="true"
        android:layout_marginLeft="16dp"
        android:id="@+id/im_user"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/locating"
            android:id="@+id/city"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/color_text_normal"/>
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/dimen_64dp"
        android:padding="12dp"
        android:background="@color/bg_white"
        android:id="@+id/select_area">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/color_text_normal"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/start"
            android:textSize="@dimen/text_size_large"
            android:padding="12dp"
            android:textColor="@color/color_text_normal"/>
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/end"
            android:textSize="@dimen/text_size_large"
            android:textColor="@color/color_text_normal"/>
        <AutoCompleteTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/end"
            android:textSize="@dimen/text_size_large"
            android:padding="12dp"
            android:hint="@string/where_are_you_go"
            android:textColor="@color/color_text_normal"/>
    </LinearLayout>


    </LinearLayout>
</RelativeLayout>